--- a/public/index.html
+++ b/public/index.html
@@ -3,147 +3,480 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stream Control Panel</title>
+    <title>Full HD Streaming Control Panel</title>
     <style>
+      :root {
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
+        --primary: 210 40% 98%;
+        --primary-foreground: 222.2 84% 4.9%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 212.7 26.8% 83.9%;
+        --radius: 0.5rem;
+      }
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
       body {
-        font-family: Arial, sans-serif;
-        max-width: 800px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+        background: linear-gradient(135deg, hsl(var(--background)) 0%, hsl(220 84% 6%) 100%);
+        color: hsl(var(--foreground));
+        min-height: 100vh;
+        padding: 2rem;
+        line-height: 1.5;
+      }
+
+      .container {
+        max-width: 48rem;
         margin: 0 auto;
-        padding: 20px;
-        line-height: 1.6;
+        background: linear-gradient(145deg, hsl(var(--card)) 0%, hsl(220 32% 5.5%) 100%);
+        border: 1px solid hsl(var(--border));
+        border-radius: calc(var(--radius) + 4px);
+        padding: 2.5rem;
+        box-shadow:
+          0 25px 50px -12px rgba(0, 0, 0, 0.25),
+          0 0 0 1px rgba(255, 255, 255, 0.05);
+        backdrop-filter: blur(8px);
       }
-      h1 {
+
+      .header {
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 2rem;
       }
+
+      h1 {
+        font-size: 2.5rem;
+        font-weight: 800;
+        margin-bottom: 0.5rem;
+        background: linear-gradient(
+          135deg,
+          hsl(var(--primary)) 0%,
+          hsl(210 40% 70%) 50%,
+          hsl(var(--muted-foreground)) 100%
+        );
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        letter-spacing: -0.025em;
+      }
+
+      .subtitle {
+        color: hsl(var(--muted-foreground));
+        font-size: 1rem;
+        font-weight: 500;
+      }
+
+      .status-card {
+        background: linear-gradient(145deg, hsl(var(--muted)) 0%, hsl(220 32% 8%) 100%);
+        border: 1px solid hsl(var(--border));
+        border-radius: var(--radius);
+        padding: 1.5rem;
+        margin-bottom: 1.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow:
+          0 4px 6px -1px rgba(0, 0, 0, 0.1),
+          0 2px 4px -1px rgba(0, 0, 0, 0.06),
+          inset 0 1px 0 0 rgba(255, 255, 255, 0.05);
+      }
+
+      .status-info {
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
+      }
+
+      .status-badge {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 0.5rem 1rem;
+        background-color: hsl(var(--secondary));
+        color: hsl(var(--secondary-foreground));
+        border-radius: calc(var(--radius) - 2px);
+        font-size: 0.875rem;
+        font-weight: 500;
+        border: 1px solid hsl(var(--border));
+      }
+
+      .status-indicator {
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background-color: hsl(var(--muted-foreground));
+        animation: pulse 2s infinite;
+      }
+
+      .status-indicator.streaming {
+        background-color: hsl(142.1 76.2% 36.3%);
+      }
+
+      .status-indicator.paused {
+        background-color: hsl(var(--destructive));
+        animation: none;
+      }
+
+      .status-indicator.error {
+        background-color: hsl(0 84.2% 60.2%);
+        animation: none;
+      }
+
+      @keyframes pulse {
+        0%,
+        100% {
+          opacity: 1;
+        }
+        50% {
+          opacity: 0.5;
+        }
+      }
+
+      .timestamp {
+        color: hsl(var(--muted-foreground));
+        font-size: 0.875rem;
+        font-family: ui-monospace, SFMono-Regular, monospace;
+      }
+
       .controls {
         display: flex;
+        gap: 0.75rem;
         justify-content: center;
-        gap: 20px;
-        margin-bottom: 30px;
+        flex-wrap: wrap;
+        margin-bottom: 2rem;
       }
+
       button {
-        padding: 10px 20px;
-        font-size: 16px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+        border-radius: var(--radius);
+        font-size: 0.875rem;
+        font-weight: 500;
+        height: 2.75rem;
+        padding: 0 1.5rem;
+        border: 1px solid hsl(var(--border));
+        background: linear-gradient(145deg, hsl(var(--background)) 0%, hsl(220 32% 6%) 100%);
+        color: hsl(var(--foreground));
         cursor: pointer;
-        background-color: #4caf50;
+        transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
+        position: relative;
+        overflow: hidden;
+        box-shadow:
+          0 1px 3px 0 rgba(0, 0, 0, 0.1),
+          0 1px 2px 0 rgba(0, 0, 0, 0.06);
+      }
+
+      button:hover {
+        background: linear-gradient(145deg, hsl(var(--accent)) 0%, hsl(220 32% 10%) 100%);
+        color: hsl(var(--accent-foreground));
+        transform: translateY(-1px);
+        box-shadow:
+          0 4px 6px -1px rgba(0, 0, 0, 0.1),
+          0 2px 4px -1px rgba(0, 0, 0, 0.06);
+      }
+
+      button:focus-visible {
+        outline: 2px solid hsl(var(--ring));
+        outline-offset: 2px;
+      }
+
+      button:active {
+        scale: 0.98;
+      }
+
+      button.primary {
+        background: linear-gradient(145deg, hsl(142.1 76.2% 36.3%) 0%, hsl(142.1 70% 30%) 100%);
         color: white;
-        border: none;
-        border-radius: 4px;
+        border-color: hsl(142.1 76.2% 36.3%);
       }
-      button:disabled {
-        background-color: #cccccc;
-        cursor: not-allowed;
+
+      button.primary:hover {
+        background: linear-gradient(145deg, hsl(142.1 76.2% 40%) 0%, hsl(142.1 70% 34%) 100%);
+        border-color: hsl(142.1 76.2% 40%);
       }
-      button#pauseBtn {
-        background-color: #f44336;
+
+      button.destructive {
+        background: linear-gradient(145deg, hsl(var(--destructive)) 0%, hsl(0 62.8% 25%) 100%);
+        color: hsl(var(--destructive-foreground));
+        border-color: hsl(var(--destructive));
       }
-      .status {
-        text-align: center;
-        margin-bottom: 30px;
-        font-weight: bold;
+
+      button.destructive:hover {
+        background: linear-gradient(145deg, hsl(0 62.8% 35%) 0%, hsl(0 62.8% 28%) 100%);
+        border-color: hsl(0 62.8% 35%);
       }
-      .urls {
-        background-color: #f5f5f5;
-        padding: 15px;
-        border-radius: 4px;
+
+      .stream-urls {
+        background: linear-gradient(145deg, hsl(var(--muted)) 0%, hsl(220 32% 8%) 100%);
+        border: 1px solid hsl(var(--border));
+        border-radius: var(--radius);
+        padding: 1.5rem;
+        box-shadow:
+          0 4px 6px -1px rgba(0, 0, 0, 0.1),
+          0 2px 4px -1px rgba(0, 0, 0, 0.06),
+          inset 0 1px 0 0 rgba(255, 255, 255, 0.05);
+      }
+
+      .stream-urls h3 {
+        margin-bottom: 1rem;
+        font-size: 1.125rem;
+        font-weight: 600;
+        color: hsl(var(--foreground));
+      }
+
+      .url-item {
+        margin-bottom: 1rem;
+        padding: 1rem;
+        background-color: hsl(var(--background));
+        border: 1px solid hsl(var(--border));
+        border-radius: calc(var(--radius) - 2px);
+        transition: all 200ms;
+      }
+
+      .url-item:hover {
+        background-color: hsl(var(--accent));
+      }
+
+      .url-label {
+        display: block;
+        font-weight: 600;
+        color: hsl(var(--foreground));
+        margin-bottom: 0.5rem;
+        font-size: 0.875rem;
+      }
+
+      .url-value {
+        font-family: ui-monospace, SFMono-Regular, monospace;
+        font-size: 0.75rem;
+        color: hsl(var(--muted-foreground));
+        word-break: break-all;
+        background-color: hsl(var(--muted));
+        padding: 0.5rem;
+        border-radius: calc(var(--radius) - 4px);
+        border: 1px solid hsl(var(--border));
+      }
+
+      .icon {
+        width: 1rem;
+        height: 1rem;
+        display: inline-block;
+      }
+
+      @media (max-width: 640px) {
+        body {
+          padding: 1rem;
+        }
+
+        .container {
+          padding: 1.5rem;
+        }
+
+        h1 {
+          font-size: 1.875rem;
+        }
+
+        .controls {
+          flex-direction: column;
+          align-items: stretch;
+        }
+
+        .status-card {
+          flex-direction: column;
+          gap: 1rem;
+          align-items: flex-start;
+        }
       }
     </style>
   </head>
   <body>
-    <h1>Video Stream Control Panel</h1>
+    <div class="container">
+      <div class="header">
+        <h1>Full HD Streamer</h1>
+        <p class="subtitle">High-Performance Localhost Video Streaming</p>
+      </div>
 
-    <div class="status">
-      Status: <span id="statusText">Loading...</span>
-      <div>Playback position: <span id="timestampText">0:00:00</span></div>
+      <div class="status-card">
+        <div class="status-info">
+          <div class="status-badge" id="statusBadge">
+            <div class="status-indicator" id="statusIndicator"></div>
+            <span id="streamStatus">Loading...</span>
+          </div>
+        </div>
+        <div class="timestamp" id="timestamp">
+          <span id="currentTime">--:--:--</span>
+        </div>
+      </div>
+
+      <div class="controls">
+        <button id="pauseBtn" class="destructive" onclick="pauseStream()" style="display: none">
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M6 4h4v16H6V4zm8 0h4v16h-4V4z" />
+          </svg>
+          Pause Stream
+        </button>
+        <button id="resumeBtn" class="primary" onclick="resumeStream()" style="display: none">
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M8 5v14l11-7z" />
+          </svg>
+          Resume Stream
+        </button>
+        <button onclick="refreshStatus()">
+          <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+            <path
+              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z" />
+          </svg>
+          Refresh Status
+        </button>
+      </div>
+
+      <div class="stream-urls">
+        <h3>Stream URLs</h3>
+        <div class="url-item">
+          <span class="url-label">HLS (Recommended)</span>
+          <div class="url-value" id="hlsUrl">Loading...</div>
+        </div>
+        <div class="url-item">
+          <span class="url-label">HTTP-FLV</span>
+          <div class="url-value" id="flvUrl">Loading...</div>
+        </div>
+        <div class="url-item">
+          <span class="url-label">RTMP</span>
+          <div class="url-value" id="rtmpUrl">Loading...</div>
+        </div>
+      </div>
     </div>
-
-    <div class="controls">
-      <button id="pauseBtn">Pause Stream</button>
-      <button id="resumeBtn" disabled>Resume Stream</button>
-    </div>
-
-    <div class="urls" id="streamUrls"></div>
 
     <script>
-      const pauseBtn = document.getElementById('pauseBtn');
-      const resumeBtn = document.getElementById('resumeBtn');
-      const statusText = document.getElementById('statusText');
-      const streamUrls = document.getElementById('streamUrls');
-      const timestampText = document.getElementById('timestampText');
+      let currentStatus = { paused: false, timestamp: 0 };
 
-      const host = window.location.hostname;
-      const controlPort = window.location.port;
-      const mediaPort = 8000;
-      const rtmpPort = 1935;
+      function formatTime(seconds) {
+        const hours = Math.floor(seconds / 3600);
+        const minutes = Math.floor((seconds % 3600) / 60);
+        const secs = seconds % 60;
+        return `${hours.toString().padStart(2, '0')}:${minutes.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
+      }
 
-      streamUrls.innerHTML = `
-            <p><strong>Stream URLs (accessible from any device on your network):</strong></p>
-            <ul>
-                <li>RTMP: rtmp://${host}:${rtmpPort}/s</li>
-                <li>HTTP-FLV: <a href="http://${host}:${mediaPort}/s.flv" target="_blank">http://${host}:${mediaPort}/s.flv</a></li>
-                <li>HLS: <a href="http://${host}:${mediaPort}/s/index.m3u8" target="_blank">http://${host}:${mediaPort}/s/index.m3u8</a></li>
-            </ul>
-            <p>You can play these URLs in VLC Media Player or similar apps</p>
-        `;
+      function updateStatus(data) {
+        currentStatus = data;
+        const statusEl = document.getElementById('streamStatus');
+        const statusIndicator = document.getElementById('statusIndicator');
+        const statusBadge = document.getElementById('statusBadge');
+        const timeEl = document.getElementById('currentTime');
+        const pauseBtn = document.getElementById('pauseBtn');
+        const resumeBtn = document.getElementById('resumeBtn');
 
-      updateStatus();
+        // Reset indicator classes
+        statusIndicator.className = 'status-indicator';
 
-      pauseBtn.addEventListener('click', pauseStream);
-      resumeBtn.addEventListener('click', resumeStream);
+        if (data.paused) {
+          statusEl.textContent = 'Paused';
+          statusIndicator.classList.add('paused');
+          pauseBtn.style.display = 'none';
+          resumeBtn.style.display = 'inline-flex';
+        } else {
+          statusEl.textContent = 'Streaming';
+          statusIndicator.classList.add('streaming');
+          pauseBtn.style.display = 'inline-flex';
+          resumeBtn.style.display = 'none';
+        }
 
-      function updateStatus() {
-        fetch('/api/timestamp')
+        timeEl.textContent = formatTime(data.timestamp);
+      }
+
+      function refreshStatus() {
+        fetch('/api/status')
           .then((response) => response.json())
           .then((data) => {
-            const isPaused = data.paused;
-            const timestamp = data.timestamp;
-
-            const hours = Math.floor(timestamp / 3600);
-            const minutes = Math.floor((timestamp % 3600) / 60);
-            const seconds = Math.floor(timestamp % 60);
-            const formattedTime = `${hours}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
-
-            timestampText.textContent = formattedTime;
-            statusText.textContent = isPaused ? 'Paused' : 'Streaming';
-            pauseBtn.disabled = isPaused;
-            resumeBtn.disabled = !isPaused;
+            fetch('/api/timestamp')
+              .then((response) => response.json())
+              .then((timestampData) => {
+                updateStatus(timestampData);
+              });
           })
           .catch((error) => {
-            console.error('Error checking status:', error);
-            statusText.textContent = 'Error';
+            console.error('Error fetching status:', error);
+            document.getElementById('streamStatus').textContent = 'Error';
+            const statusIndicator = document.getElementById('statusIndicator');
+            statusIndicator.className = 'status-indicator error';
           });
       }
 
       function pauseStream() {
-        statusText.textContent = 'Pausing...';
         fetch('/api/pause', { method: 'POST' })
           .then((response) => response.json())
           .then((data) => {
-            console.log('Pause response:', data);
-            updateStatus();
+            updateStatus(data);
           })
           .catch((error) => {
             console.error('Error pausing stream:', error);
-            statusText.textContent = 'Error';
           });
       }
 
       function resumeStream() {
-        statusText.textContent = 'Resuming...';
         fetch('/api/resume', { method: 'POST' })
           .then((response) => response.json())
           .then((data) => {
-            console.log('Resume response:', data);
-            updateStatus();
+            updateStatus(data);
           })
           .catch((error) => {
             console.error('Error resuming stream:', error);
-            statusText.textContent = 'Error';
           });
       }
 
-      setInterval(updateStatus, 1000);
+      function initializeUrls() {
+        const hostname = window.location.hostname;
+        const mediaPort = 8000;
+        const rtmpPort = 1935;
+
+        document.getElementById('hlsUrl').textContent = `http://${hostname}:${mediaPort}/live/stream/index.m3u8`;
+        document.getElementById('flvUrl').textContent = `http://${hostname}:${mediaPort}/live/stream.flv`;
+        document.getElementById('rtmpUrl').textContent = `rtmp://${hostname}:${rtmpPort}/live/stream`;
+      }
+
+      // Add click-to-copy functionality
+      function addCopyFunctionality() {
+        const urlValues = document.querySelectorAll('.url-value');
+        urlValues.forEach((urlValue) => {
+          urlValue.style.cursor = 'pointer';
+          urlValue.title = 'Click to copy';
+          urlValue.addEventListener('click', () => {
+            navigator.clipboard.writeText(urlValue.textContent).then(() => {
+              const originalText = urlValue.textContent;
+              urlValue.textContent = 'Copied!';
+              setTimeout(() => {
+                urlValue.textContent = originalText;
+              }, 1000);
+            });
+          });
+        });
+      }
+
+      // Initialize
+      initializeUrls();
+      addCopyFunctionality();
+      refreshStatus();
+
+      // Auto-refresh status every 2 seconds
+      setInterval(refreshStatus, 2000);
     </script>
   </body>
 </html>
